添加sql脚本，开发环境 配饰文件

--- a/.env.development
+++ b/.env.development
@@ -9,11 +9,11 @@ LOG_MAX_FILES =5
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=123.206.190.125
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=db_tpfull
-DB_USERNAME=test
-DB_PASSWORD=test123
+DB_USERNAME=test_full
+DB_PASSWORD=passwd_123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
