添加weui， 添加微信登录相关功能

--- a/config/.env.development
+++ b/config/.env.development
@@ -34,3 +34,7 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+WECHAT_APP_ID = wx030ea3d763b7c9fb
+WECHAT_APP_SECRET = 91b7a02555480e57703874b1244ccdfc
+WECHAT_TOKEN
