--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "mews/purifier": "^2.0",
-        "overtrue/wechat": "~3.1"
+        "overtrue/wechat": "~3.1",
+        "workerman/workerman": "^3.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
