--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/tinker": "~1.0",
         "mews/purifier": "^2.0",
         "overtrue/wechat": "~3.1",
+        "workerman/gateway-worker": "^3.0",
         "workerman/workerman": "^3.4"
     },
     "require-dev": {
