添加腾讯对象存储

--- a/config/.env.production
+++ b/config/.env.production
@@ -40,5 +40,5 @@ WECHAT_APP_SECRET = 91b7a02555480e57703874b1244ccdfc
 WECHAT_TOKEN
 
 
-QCOS_SECRETID =
-QCOS_SECRETKEY =
+QCOS_SECRETID =AKID0twjLwVEQXTDxDrzRqFWnlmR9qV8gIrE
+QCOS_SECRETKEY =ZmHlbUOIMUcjN6lTOJE7yofVKBzlVDuZ
