--- a/public/.htaccess
+++ b/public/.htaccess
@@ -15,4 +15,4 @@ RewriteRule ^.*$ - [NC,L]
 RewriteCond %{REQUEST_URI}::$1 ^(/.+)(.+)::\2$
 RewriteRule ^(.*) - [E=BASE:%1]
 RewriteRule ^admin/.* %{ENV:BASE}admin/index.html [NC,L]
-RewriteRule ^(.*)$ %{ENV:BASE}index.php [NC,L]
+#RewriteRule ^(.*)$ %{ENV:BASE}index.php [NC,L]
